sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:16: error: type mismatch;
 found   : Unit
 required: Boolean
    if (n=false){
         ^AlgCocktailSort3:27: error: type mismatch;
 found   : Unit
 required: Boolean
    if (n=false){
         ^